--- a/templates/payments/receipt_print.html
+++ b/templates/payments/receipt_print.html
@@ -197,18 +197,27 @@
     <div class="receipt-print">
         <!-- Header Section -->
         <div class="header">
-            <div class="company-name">{{ request.tenant.name|upper }}</div>
-            {% if request.tenant.address %}
-            <div class="company-details">{{ request.tenant.address }}</div>
+            <div class="company-name">{{ business.name|upper }}</div>
+            {% if tenant_settings.tagline %}
+            <div class="company-details">{{ tenant_settings.tagline }}</div>
             {% endif %}
-            {% if request.tenant.phone %}
-            <div class="company-details">Tel: {{ request.tenant.phone }}</div>
+            {% if tenant_settings.contact_address %}
+            <div class="company-details">{{ tenant_settings.contact_address }}</div>
+            {% elif business.city %}
+            <div class="company-details">{{ business.city }}{% if business.state %}, {{ business.state }}{% endif %}</div>
             {% endif %}
-            {% if request.tenant.email %}
-            <div class="company-details">{{ request.tenant.email }}</div>
+            {% if tenant_settings.contact_phone %}
+            <div class="company-details">Tel: {{ tenant_settings.contact_phone }}</div>
+            {% elif business.phone %}
+            <div class="company-details">Tel: {{ business.phone }}</div>
             {% endif %}
-            {% if request.tenant.website %}
-            <div class="company-details">{{ request.tenant.website }}</div>
+            {% if tenant_settings.contact_email %}
+            <div class="company-details">{{ tenant_settings.contact_email }}</div>
+            {% elif business.email %}
+            <div class="company-details">{{ business.email }}</div>
+            {% endif %}
+            {% if tenant_settings.website_url %}
+            <div class="company-details">{{ tenant_settings.website_url }}</div>
             {% endif %}
         </div>
         
@@ -505,7 +514,7 @@
         <div class="footer-section">
             <div class="thermal-spacing">Thank you for your business!</div>
             <div class="thermal-spacing">Visit us again soon</div>
-            <div class="thermal-spacing">{{ request.tenant.website|default:"www.autowash.co.ke" }}</div>
+            <div class="thermal-spacing">{{ tenant_settings.website_url|default:"www.autowash.co.ke" }}</div>
             <div class="thermal-spacing">Powered by AutoWash</div>
         </div>
         
