--- a/templates/services/order_receipt.html
+++ b/templates/services/order_receipt.html
@@ -337,18 +337,27 @@
             <div class="d-print-block d-none">
                 <!-- Header Section -->
                 <div class="header-section">
-                    <div class="business-name">{{ request.tenant.name|upper }}</div>
-                    {% if request.tenant.address %}
-                    <div class="business-details">{{ request.tenant.address }}</div>
+                    <div class="business-name">{{ business.name|upper }}</div>
+                    {% if tenant_settings.tagline %}
+                    <div class="business-details">{{ tenant_settings.tagline }}</div>
                     {% endif %}
-                    {% if request.tenant.phone %}
-                    <div class="business-details">Tel: {{ request.tenant.phone }}</div>
+                    {% if tenant_settings.contact_address %}
+                    <div class="business-details">{{ tenant_settings.contact_address }}</div>
+                    {% elif business.city %}
+                    <div class="business-details">{{ business.city }}{% if business.state %}, {{ business.state }}{% endif %}</div>
                     {% endif %}
-                    {% if request.tenant.email %}
-                    <div class="business-details">{{ request.tenant.email }}</div>
+                    {% if tenant_settings.contact_phone %}
+                    <div class="business-details">Tel: {{ tenant_settings.contact_phone }}</div>
+                    {% elif business.phone %}
+                    <div class="business-details">Tel: {{ business.phone }}</div>
                     {% endif %}
-                    {% if request.tenant.website %}
-                    <div class="business-details">{{ request.tenant.website }}</div>
+                    {% if tenant_settings.contact_email %}
+                    <div class="business-details">{{ tenant_settings.contact_email }}</div>
+                    {% elif business.email %}
+                    <div class="business-details">{{ business.email }}</div>
+                    {% endif %}
+                    {% if tenant_settings.website_url %}
+                    <div class="business-details">{{ tenant_settings.website_url }}</div>
                     {% endif %}
                 </div>
                 
@@ -595,15 +604,24 @@
             <div class="receipt-preview d-print-none">
                 <!-- Header -->
                 <div class="preview-header">
-                    <div class="preview-business-name">{{ request.tenant.name|upper }}</div>
-                    {% if request.tenant.address %}
-                    <div class="preview-business-details">{{ request.tenant.address }}</div>
+                    <div class="preview-business-name">{{ business.name|upper }}</div>
+                    {% if tenant_settings.tagline %}
+                    <div class="preview-business-details">{{ tenant_settings.tagline }}</div>
                     {% endif %}
-                    {% if request.tenant.phone %}
-                    <div class="preview-business-details">Tel: {{ request.tenant.phone }}</div>
+                    {% if tenant_settings.contact_address %}
+                    <div class="preview-business-details">{{ tenant_settings.contact_address }}</div>
+                    {% elif business.city %}
+                    <div class="preview-business-details">{{ business.city }}{% if business.state %}, {{ business.state }}{% endif %}</div>
                     {% endif %}
-                    {% if request.tenant.email %}
-                    <div class="preview-business-details">{{ request.tenant.email }}</div>
+                    {% if tenant_settings.contact_phone %}
+                    <div class="preview-business-details">Tel: {{ tenant_settings.contact_phone }}</div>
+                    {% elif business.phone %}
+                    <div class="preview-business-details">Tel: {{ business.phone }}</div>
+                    {% endif %}
+                    {% if tenant_settings.contact_email %}
+                    <div class="preview-business-details">{{ tenant_settings.contact_email }}</div>
+                    {% elif business.email %}
+                    <div class="preview-business-details">{{ business.email }}</div>
                     {% endif %}
                 </div>
                 
