--- a/templates/suppliers/invoice_detail.html
+++ b/templates/suppliers/invoice_detail.html
@@ -65,11 +65,17 @@
                             <div class="col-md-6">
                                 <div class="invoice-from">
                                     <h6>From:</h6>
-                                    <strong>{{ request.tenant.business_name }}</strong><br>
-                                    {{ request.tenant.address|default:"" }}<br>
-                                    {% if request.tenant.phone %}Phone: {{ request.tenant.phone }}<br>{% endif %}
-                                    {% if request.tenant.email %}Email: {{ request.tenant.email }}<br>{% endif %}
-                                    {% if request.tenant.vat_number %}VAT: {{ request.tenant.vat_number }}{% endif %}
+                                    <strong>{{ business.name }}</strong><br>
+                                    {% if tenant_settings.tagline %}{{ tenant_settings.tagline }}<br>{% endif %}
+                                    {% if tenant_settings.contact_address %}
+                                    {{ tenant_settings.contact_address }}<br>
+                                    {% elif business.city %}
+                                    {{ business.city }}{% if business.state %}, {{ business.state }}{% endif %}<br>
+                                    {% endif %}
+                                    {% if tenant_settings.contact_phone %}Phone: {{ tenant_settings.contact_phone }}<br>
+                                    {% elif business.phone %}Phone: {{ business.phone }}<br>{% endif %}
+                                    {% if tenant_settings.contact_email %}Email: {{ tenant_settings.contact_email }}<br>
+                                    {% elif business.email %}Email: {{ business.email }}<br>{% endif %}
                                 </div>
                             </div>
                             <div class="col-md-6 text-end">
